--- a/.README.md
+++ b/.README.md
@@ -1,1 +1,5 @@
 Template of any future project
+
+- [Demo link](https://Anton-Karpena.github.io/company_landing)
+
+- [MOCKUP](https://www.figma.com/file/NSdQAnBlvX7kSKDJtM3503/Test-Brainlab?node-id=0%3A1)
